<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:longClickable="true" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        android:weightSum="100" >

        <TextView
            android:id="@+id/connectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_disconnected"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="90"
            android:adjustViewBounds="true"
            android:contentDescription="album cover"
            android:src="@drawable/album_default" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="1"
                android:text="@string/track_label"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/trackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_row="1"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="2"
                android:text="@string/artist_label"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/trackArtist"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_row="2"
                android:textColor="#ffffff" />
        </GridLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/playButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_play"
                android:text="@string/play_label" />

            <ImageButton
                android:id="@+id/pauseButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_pause"
                android:text="@string/pause_label" />

            <ImageButton
                android:id="@+id/previousButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_previous"
                android:text="@string/previous_label" />

            <ImageButton
                android:id="@+id/nextButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_next"
                android:text="@string/next_label" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/volume_label"
                android:textColor="#ffffff" />

            <SeekBar
                android:id="@+id/volumeBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="50" />

            <TextView
                android:id="@+id/volumeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" >

            <Button
                android:id="@+id/playRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_random_label" />

            <Button
                android:id="@+id/searchArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_artist_label" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>